LAB2CASH - Aula 6.4 Criacao do projeto de proxy e bind das instancias

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "cds": {
     "requires": {
       "[production]": {
-        "auth": "xsuaa"
+        "[production]": {
+          "auth": "xsuaa"
+        }        
       }      
     }
   }
